# airq-rs

./: .env  .gitignore  Airq.toml  Cargo.toml  Makefile  README.md  airq.service  createdb.sql  index.html  render-measurements.py
airq-lib/: Cargo.toml
airq-lib/src/: data.rs  lib.rs
fetch-data/: Cargo.toml
fetch-data/src/: lib.rs  main.rs
measurements/: Cargo.toml
measurements/src/: main.rs
server/: Cargo.toml
server/src/: fetch_data.rs  include_static_files.rs  main.rs  storage.rs
src/: data.rs  error.rs  lib.rs  main.rs
static/: data.js  index.html  style.css
