[package]
name = "airq"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blocking = ["reqwest/blocking"]

[dependencies]
reqwest = { version = "0.10.7", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
base64 = "0.12.3"
aes = "0.4.0"
block-modes = "0.5.0"
rand = "0.7.3"
