[package]
name = "airq"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blocking = ["reqwest/blocking"]

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
base64 = "0.13.0"
aes = "0.6.0"
block-modes = "0.7.0"
rand = "0.8.3"
