[package]
name = "fetch-data"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airq = { path = "../airq-lib" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
toml = "0.5.6"
clap = "3.0.0-beta.1"
