[package]
name = "fetch-data"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airq = { path = "../airq-lib" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
toml = "0.5.8"
sqlx = { version = "0.5.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres"] }
tokio = "1.2.0"
futures = "0.3.12"
thiserror = "1.0.23"
