[package]
name = "measurements"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airq = { path = "../airq-lib" }
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread", "fs"] }
dotenv = "0.15.0"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
