[package]
name = "server"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fetch-data = { path = "../fetch-data" }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
sqlx = { version = "0.5.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres"] }
tokio = "1.2.0"
airq = { path = "../airq-lib" }
serde = { version = "1.0.123", features = ["derive"] }
futures = "0.3.12"
lazy_static = "1.4.0"
# workaround for https://github.com/bitvecto-rs/bitvec/issues/105
funty = "=1.1.0"
